# ur5_control

./: README.md
src/robotiq_force_torque_sensor/include/robotiq_force_torque_sensor/: ft_sensor.h
src/robotiq_force_torque_sensor/nodes/: rq_test_sensor.cpp
src/serial_port/: CMakeLists.txt  package.xml
src/serial_port/src/: serial.cpp  serial.h
src/torque_teaching/: CMakeLists.txt  package.xml
src/torque_teaching/robotiq_force_torque_sensor/: sensor_accessorRequest.h  sensor_accessorResponse.h
src/torque_teaching/src/: ikbasedonqp.cpp  ikbasedonqp.h  torque_teaching.cpp  trajectory_generate.cpp  trajectory_generate.h
src/universal_robot_driver/serial/: CMakeLists.txt  package.xml
src/universal_robot_driver/ur5_moveit_config/launch/: demo.launch
src/universal_robot_driver/ur_description/: package.xml
src/universal_robot_driver/ur_description/launch/: ur5_upload.launch
src/universal_robot_driver/ur_description/urdf/: common.gazebo.xacro  ur.transmission.xacro  ur5.urdf.xacro
src/universal_robot_driver/ur_gazebo/: CMakeLists.txt  package.xml
src/universal_robot_driver/ur_gazebo/controller/: arm_controller_ur5.yaml  joint_state_controller.yaml
src/universal_robot_driver/ur_gazebo/launch/: controller_utils.launch  ur10.launch  ur5.launch  ur5_gas_station.launch
src/universal_robot_driver/ur_gazebo/worlds/: ur10_obstacle.world  ur5_gas_station.world
src/universal_robot_positive/publisher/: CMakeLists.txt  package.xml
src/universal_robot_positive/publisher/src/: ikbasedonqp.cpp  ikbasedonqp.h  optimal_distance.h  talker.cpp  trajectory_generate.cpp
src/ur10_robotiq/ur10_robotiq_description/: CMakeLists.txt  package.xml
src/ur10_robotiq/ur10_robotiq_description/launch/: ur10_robotiq_upload.launch
src/ur10_robotiq/ur10_robotiq_description/meshes/robotiq/visual/: torque_cam_link.STL
src/ur10_robotiq/ur10_robotiq_description/urdf/: common.gazebo.xacro  ur10.urdf.xacro  ur10_robotiq.urdf  ur10_robotiq_transmission.xacro
src/ur10_robotiq/ur10_robotiq_gazebo/: CMakeLists.txt  package.xml
src/ur10_robotiq/ur10_robotiq_gazebo/controller/: controllers.yaml  joint_state_controller.yaml
src/ur10_robotiq/ur10_robotiq_gazebo/launch/: both.launch  controller_utils.launch  moveit_planning_execution.launch  ur10_robotiq.launch  ur10_robotiq_moveit_controller_manager.launch
src/ur10_robotiq/ur10_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur10_robotiq/ur10_robotiq_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ur10-robotiq.srdf
src/ur10_robotiq/ur10_robotiq_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10-robotiq_moveit_controller_manager.launch.xml  warehouse.launch
src/ur_modern_driver/: CMakeLists.txt
src/ur_modern_driver/src/: ur_driver.cpp  ur_ros_wrapper.cpp
src/ur_modern_driver_copy/: CMakeLists.txt  package.xml
src/ur_modern_driver_copy/include/ur_modern_driver/: ur_driver.h
src/ur_modern_driver_copy/launch/: ur10_bringup.launch  ur_common.launch
src/ur_modern_driver_copy/src/: ur_driver.cpp  ur_ros_wrapper.cpp
